Fix overflow in icon grid view

--- a/src/Layout.scss
+++ b/src/Layout.scss
@@ -221,6 +221,7 @@
 
 .ClickablePicto__image {
   min-height: 0;
+  max-width: 100%;
 }
 
 .ClickablePicto__textlayer {
